--- a/index.html
+++ b/index.html
@@ -7,73 +7,83 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-
+<div class="container">
 <header>
 
-    <div class="hamburger-menu hamburger-menu--header">
+    <div class="hamburger-menu hamburger-menu--header  icon-button">
         <a href="#"><img src="img/burger.png" alt="Menu"></a>
     </div>
 
-    <div class="logo ">
+    <div class="logo">
         <a href="#"><img src="img/logo.png" alt="Logo"></a>
     </div>
 
+
+    <!-- ---------- User menu ---------- -->
+
     <div class="user-menu">
-        <div class="user-menu__call">
-            <a href="#"><img src="img/call.png" alt="Call"></a>
-        </div>
-        <div class="user-menu__chat">
-            <a href="#"><img src="img/chat.png" alt="Call"></a>
-        </div>
-        <div class="user-menu__profile">
-            <a href="#"><img src="img/profile.png" alt="Call"></a>
-        </div>
+        <button class="user-menu__call icon-button"><img src="img/call.png" alt="Call"></button>
+        <button class="user-menu__chat icon-button"><img src="img/chat.png" alt="Call"></button>
+        <button class="user-menu__profile icon-button"><img src="img/profile.png" alt="Call"></button>
     </div>
 
+
+    <!-- ---------- Service menu ---------- -->
+
     <div class="service-menu">
-        <div class="service-menu__repair">
-            <a href="#"><img src="img/repair.png" alt="Repair"></a>
-        </div>
-        <div class="service-menu__checkstatus">
-            <a href="#"><img src="img/checkstatus.png" alt="Status"></a>
-        </div>
+        <button class="service-menu__repair icon-button">
+            <img src="img/repair.png" alt="Repair">
+        </button>
+        <button class="service-menu__checkstatus icon-button">
+            <img src="img/checkstatus.png" alt="Status">
+        </button>
     </div>
 
 </header>
 
+
+    <!-- ---------- Main content ---------- -->
+
 <main class="main">
 
+
+    <!-- ---------- Service menu ---------- -->
+
     <div class="service-menu-with-text">
-        <div class="service-menu__repair service-menu-item">
+        <button class="service-menu__repair icon-button">
             <span class="service-menu-item-text">Оставить заявку</span>
-            <a href="#"><img src="img/repair.png" alt="Repair"></a>
-        </div>
-        <div class="service-menu__checkstatus service-menu-item">
+            <img src="img/repair.png" alt="Repair">
+        </button>
+        <button class="service-menu__checkstatus icon-button">
             <span class="service-menu-item-text">Статус ремонта</span>
-            <a href="#"><img src="img/checkstatus.png" alt="Status"></a>
-        </div>
+            <img src="img/checkstatus.png" alt="Status">
+        </button>
     </div>
+
+
     <h1 class="main__header">Услуги и сервисы</h1>
 
+    <!-- ---------- Main menu ---------- -->
+
     <nav class="main-menu">
-        <button class="main-menu__button main-menu__button--active">
+        <a href="#" class="main-menu__button">
             Ремонтируемые устройства
-        </button>
-        <button class="main-menu__button">
+        </a>
+        <a href="#" class="main-menu__button">
             Дополнительные услуги
-        </button>
-        <button class="main-menu__button">
+        </a>
+        <a href="#" class="main-menu__button">
             Цены на услуги
-        </button>
-        <button class="main-menu__button">
+        </a>
+        <a href="#" class="main-menu__button">
             Адреса сервисных центров
-        </button>
-        <button class="main-menu__button">
+        </a>
+        <a href="#" class="main-menu__button">
             Специальные цены
-        </button>
-        <button class="main-menu__button">
+        </a>
+        <a href="#" class="main-menu__button">
             Отзывы
-        </button>
+        </a>
     </nav>
 
     <article class="main-article">
@@ -81,9 +91,8 @@
             <p class="main-article__p">
                 Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
             </p>
-            <div class="main-article__read-more">
-                <a class="read-more-arrow" href="#"><img src="img/read-more.png" alt="Read more"></a>
-                <h3 class="read-more-header">Читать далее</h3>
+            <div class="read-more">
+                <a class="read-more__link" href="#">Читать далее</a>
             </div>
         </div>
         <img src="img/main-image.jpg" alt="CPS" class="main-article__img">
@@ -91,6 +100,6 @@
 
 
 </main>
-
+</div>
 </body>
 </html>
