--- a/index.html
+++ b/index.html
@@ -6,38 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/css.css">
 </head>
+
+
+
 <body>
+
 <div class="container">
-<header>
+<header class="main-page-header">
 
     <div class="hamburger-menu hamburger-menu--header  icon-button">
-        <a href="#"><img src="img/burger.png" alt="Menu"></a>
+        <a href="mobile_menu.html"><img src="img/burger.png" alt="Menu"></a>
     </div>
 
-    <div class="logo">
+    <div class="logo logo--768">
         <a href="#"><img src="img/logo.png" alt="Logo"></a>
     </div>
 
 
     <!-- ---------- User menu ---------- -->
 
-    <div class="user-menu">
+    <nav class="user-menu user-menu--main-page">
         <button class="user-menu__call icon-button"><img src="img/call.png" alt="Call"></button>
         <button class="user-menu__chat icon-button"><img src="img/chat.png" alt="Call"></button>
         <button class="user-menu__profile icon-button"><img src="img/profile.png" alt="Call"></button>
-    </div>
+    </nav>
 
 
     <!-- ---------- Service menu ---------- -->
 
-    <div class="service-menu">
+    <nav class="service-menu">
         <button class="service-menu__repair icon-button">
             <img src="img/repair.png" alt="Repair">
         </button>
         <button class="service-menu__checkstatus icon-button">
             <img src="img/checkstatus.png" alt="Status">
         </button>
-    </div>
+    </nav>
 
 </header>
 
@@ -49,7 +53,7 @@
 
     <!-- ---------- Service menu ---------- -->
 
-    <div class="service-menu-with-text">
+    <nav class="service-menu-with-text">
         <button class="service-menu__repair icon-button">
             <span class="service-menu-item-text">Оставить заявку</span>
             <img src="img/repair.png" alt="Repair">
@@ -58,7 +62,7 @@
             <span class="service-menu-item-text">Статус ремонта</span>
             <img src="img/checkstatus.png" alt="Status">
         </button>
-    </div>
+    </nav>
 
 
     <h1 class="main__header">Услуги и сервисы</h1>
