--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header class="main-page-header">
 
     <div class="hamburger-menu hamburger-menu--header  icon-button">
-        <a href="mobile_menu.html"><img src="img/burger.png" alt="Menu"></a>
+        <a href="https://steaddy.github.io/templete-1_3/mobile_menu.html"><img src="img/burger.png" alt="Menu"></a>
     </div>
 
     <div class="logo logo--768">
