--- a/mobile_menu.html
+++ b/mobile_menu.html
@@ -17,7 +17,7 @@
             <button class="mobile-window-header__close-button icon-button"><img src="img/close.png" alt="Close"></button>
 
             <div class="logo">
-                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                <a href="https://steaddy.github.io/templete-1_3/index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
 
             <button class="mobile-window-header__search-button icon-button"><img src="img/search.png" alt="Search"></button>
