Narrow menu changes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
 <div class="container">
-<header class="main-page-header">
+<header class="main-page-header header-1120">
 
     <div class="hamburger-menu hamburger-menu--header  icon-button">
-        <a href="https://steaddy.github.io/templete-1_3/mobile_menu.html"><img src="img/burger.png" alt="Menu"></a>
+        <a href="https://steaddy.github.io/templete-1_3/narrow_menu.html"><img src="img/burger.png" alt="Menu"></a>
     </div>
 
     <div class="logo logo--768">
