--- a/narrow_menu.html
+++ b/narrow_menu.html
@@ -10,47 +10,47 @@
 </head>
 <body>
 
-<div class="mobile-window-container">
+<div class="narrow-window-container">
 
-        <header class="mobile-window-header">
+        <header class="narrow-window-header">
 
-            <button class="mobile-window-header__close-button icon-button"><img src="img/close.png" alt="Close"></button>
+            <button class="narrow-window-header__close-button icon-button"><img src="img/close.png" alt="Close"></button>
 
             <div class="logo">
                 <a href="https://steaddy.github.io/templete-1_3/index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
 
-            <button class="mobile-window-header__search-button icon-button"><img src="img/search.png" alt="Search"></button>
+            <button class="narrow-window-header__search-button icon-button"><img src="img/search.png" alt="Search"></button>
 
         </header>
 
         <main>
 
-            <!-- ---------- Mobile window menu ---------- -->
+            <!-- ---------- narrow window menu ---------- -->
 
-            <nav class="mobile-window-menu">
-                <a href="#" class="mobile-window-menu__button">
+            <nav class="narrow-window-menu">
+                <a href="#" class="narrow-window-menu__button">
                     Ремонт техники
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Услуги и сервисы
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Корпаративным клиентам
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Продавцам техники
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Партнерам
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Производителям
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Наши сервисные центры
                 </a>
-                <a href="#" class="mobile-window-menu__button">
+                <a href="#" class="narrow-window-menu__button">
                     Контакты
                 </a>
             </nav>
@@ -69,12 +69,12 @@
         </main>
 
     <footer>
-        <p class="e-mail">mail@cps.com</p>
-        <p class="phone">8 800 890 8900</p>
+        <p class="e-mail"><a href="mailto:mail@cps.com">mail@cps.com</a></p>
+        <p class="phone"><a href="tel:+88008908900">8 800 890 8900</a></p>
         <nav class="language-menu">
-            <button class="language-menu__button">ru</button>
-            <button class="language-menu__button">en</button>
-            <button class="language-menu__button">ch</button>
+            <button class="language-menu__button square-button">ru</button>
+            <button class="language-menu__button square-button">en</button>
+            <button class="language-menu__button square-button">ch</button>
         </nav>
     </footer>
     </div>
