--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container">
-<header class="main-page-header header-1120">
+<header class="main-page-header header-main">
 
     <div class="hamburger-menu hamburger-menu--header  icon-button">
         <a href="https://steaddy.github.io/templete-1_3/narrow_menu.html"><img src="img/burger.png" alt="Menu"></a>
@@ -105,5 +105,8 @@
 
 </main>
 </div>
+
+
+<script src="js/js.js"></script>
 </body>
 </html>
